# sts-lib

./: .gitattributes  .gitignore  CHANGELOG.md  CONFIG.md  README.md  publish.cmd  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: pages.yml  release.yml  test.yml
config/: default.ini  hk2s.json  hk2t.json  jp2t.json  m2s.json  m2s_vp.json  m2t.json  m2t_vp.json  s2hk.json  s2hkp.json  s2t.json  s2t_vp.json  s2t_vp_tw_vp.json  s2tw.json  s2twp.json  t2cn.json  t2cnp.json  t2hk.json  t2jp.json  t2s.json  t2s_vp.json  t2s_vp_cn_vp.json  tw2s.json  tw2sp.json  tw2t.json  tw2tp.json
data/config/: m2s.json  s2hkp.json  t2cnp.json
data/dictionary/jp2t-chars/: common.txt
data/dictionary/st-chars/: common.txt
data/dictionary/t2jp-chars/: common.txt
data/dictionary/ts-chars/: common.txt
data/scheme/: st_multi.txt
dictionary/: JPVariants.txt  TSPhrases.txt
dictionary/cn-p/: name.txt
dictionary/hk-p/: it.txt  name.txt
dictionary/hk-v/: common.txt
dictionary/jp2t-chars/: common.txt  extra.txt
dictionary/s2t-p/: common.txt
dictionary/s2t-v/: common.txt  ext-a.txt
dictionary/sg-p/: common.txt
dictionary/st-chars/: common.txt
dictionary/st-phrases/: common.txt
dictionary/t2jp-chars/: common.txt
dictionary/t2s-v/: common.txt  ext-a.txt  ext-c.txt
dictionary/t2tw-chars/: common.txt
dictionary/t2tw-phrases/: it.txt
dictionary/ts-chars/: common.txt
dictionary/tw-v/: common.txt
locale/: s2cn-p.txt  s2cn_p.txt  s2sg_p.txt  s2sg_v.txt  t2hk_p.txt  t2hk_v.txt  t2tw_p.txt  t2tw_v.txt
locale/cn-p/: it.txt
locale/hk-p/: common.txt
locale/hk-v/: common.txt
locale/s2cn-p/: other.txt
locale/t2hk-v/: common.txt
locale/t2tw-p/: it.txt  name.txt  other.txt
locale/t2tw-v/: common.txt
locale/tw-v/: common.txt
scripts/: build.py  fetch.py  scheme.py  tgh.py
sim_trad/: s2t_p.txt  t2s_p.txt  t2s_v.txt
sim_trad/s2t-p/: common.txt
sim_trad/s2t-v/: common.txt  ext-a.txt  ext-b.txt  ext-c.txt  rare.txt
sim_trad/t2s-p/: common.txt
sim_trad/t2s-v/: common.txt  ext-a.txt  ext-b.txt
sts/: __init__.py  __main__.py  cli.py  common.py
sts/data/: htmlpage.tpl.html
sts/data/config/: _default.json  _default.yaml  _extend.json  hk2s.json  hk2s.yaml  hk2sp.json  hk2spx.json  hk2sx.json  hk2t.json  hk2t.yaml  jp2t.json  jp2t.yaml  m2t.json  s2hk.json  s2hk.yaml  s2hkp.json  s2t.json  s2t.yaml  s2tw.json  s2tw.yaml  s2twp.json  s2twp.yaml  t2cn.json  t2hk.json  t2hk.yaml  t2jp.json  t2jp.yaml  t2jpx.json  t2s.json  t2s.yaml  t2sx.json  t2tw.json  t2tw.yaml  t2twp.json  tw2s.json  tw2s.yaml  tw2sp.json  tw2sp.yaml  tw2spx.json  tw2sx.json  (+2 more)
sts/data/dictionary/: HKVariants.txt  HKVariantsPhrases.txt  HKVariantsRev.txt  HKVariantsRevPhrases.txt  JPVariants.txt  JPVariantsPhrases.txt  JPVariantsRev.txt  JPVariantsRevPhrases.txt  STCharacters.txt  STCharactersEx.txt  STPhrases.txt  TSCharacters.txt  TSCharactersEx.txt  TSPhrases.txt  TWPhrases.txt  TWPhrasesOther.txt  TWPhrasesRev.txt  TWVariants.txt  TWVariantsPhrases.txt  TWVariantsRev.txt  TWVariantsRevPhrases.txt
sts/data/dictionary/jp2t-chars/: extra.txt
sts/data/dictionary/s2cn-chars/: common.txt
sts/data/dictionary/st-chars/: common.txt
sts/data/dictionary/ts-chars/: common.txt
sts/data/htmlpage/: index.css  index.html  index.js  index_single.html  sts.js
sts/data/scheme/: README.md  chars.tsv  chars_jp2t.tsv  chars_s2t.tsv  chars_t2hk.tsv  chars_t2jp.tsv  chars_t2s.tsv  chars_t2tw.tsv  chars_tw2t.tsv  cn_tgh_convert.tsv  cn_tgh_list.tsv  jp_hyougai.tsv  jp_jinmeiyou.tsv  jp_jouyou.tsv  st_multi.tsv  st_multi.txt  st_unihan13.txt  traditional.tsv  ts_multi.tsv  ts_multi.txt  ts_tgh_convert.txt  ts_unihan13.txt  variant.txt
test/: __init__.py
test/test_dict/: join1.json  join1_s2t.txt  join1_t2tw.txt  join2.in  join2_s2t.txt  join3.in  join3.json  join3_tw2t.txt  join4.ans  merge2.ans
test/test_exclude/: exclude1.ans  exclude1.in  exclude2.ans  exclude2.in  exclude3.ans  exclude3.in
test/test_format/: format_html.ans  format_html.json  format_json.ans  format_json.json  format_txt_mark.json  format_txtm.ans  format_txtm.in  format_txtm.json  format_txtm.txt
test/test_ids/: cdm1.ans  cdm1.in  cdm1.json  cdm1.txt  ids1.ans  ids1.in  ids1.json  ids1.txt  ids2.ans  ids2.in  ids2.json  ids2.txt  ids_broken1.ans  ids_broken1.in  vi1.ans  vi1.in  vi1.json  vi1.txt  vs1.ans  vs1.in  vs1.json  vs1.txt
test/test_make/: join1.in  join2.json  join3_t2s.txt  merge1.ans
tests/: README.md  __init__.py  benchmark.py  test_common.py  test_data.py  test_init.py
tests/test_data_config/: hk2s.yaml  hk2t.yaml  jp2t.yaml  s2hk.yaml  s2t.yaml  s2tw.yaml  s2twp.yaml  t2hk.yaml  t2jp.yaml  t2s.yaml  tw2s.yaml  tw2sp.yaml  tw2t.yaml
tests/test_data_configs/: testcases.yaml
tests/test_make/: join1.ans  join2.ans  join2_t2tw.txt  join3.ans  join4.in  join4.json  join4_s2t.txt  join4_t2tw.txt  merge1.in  merge1.json  merge1_chars.txt  merge1_phrases.txt  merge2.json
