[metadata]
name = sts-lib
version = attr: sts.__version__
author = Danny Lin
author_email = danny0838@gmail.com
url = https://github.com/danny0838/sts-lib
description = An open library for flexible simplified-traditional Chinese text conversion.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache 2.0
classifiers =
    Development Status :: 4 - Beta
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
python_requires = ~=3.7
packages = find:

[options.extras_require]
yaml =
    pyyaml >= 5.0
dev =
    pyyaml >= 5.0
    flake8 >= 4.0
    flake8-quotes >= 3.4
    flake8-comprehensions >= 3.7
    flake8-string-format >= 0.3
    pep8-naming >= 0.13.2
    flake8-bugbear >= 22.0
    flake8-isort >= 4.2
    isort >= 5.5
    tox >= 4.0

[options.packages.find]
exclude = tests

[options.package_data]
sts =
    data/*.html
    data/config/*.json
    data/dictionary/*.txt
    data/scheme/*.txt

[options.entry_points]
console_scripts =
    sts = sts.cli:main

[flake8]
exclude = build, .git

max-line-length = 160

# Flake8 Rules
# https://www.flake8rules.com/
extend-select =
    # E123: closing bracket does not match indentation of opening bracket's line
    E123

ignore =
    # W503: Line break occurred before a binary operator
    W503

ignore-names =
    setUp
    tearDown
    setUpClass
    tearDownClass
    setUpModule
    tearDownModule
    asyncSetUp
    asyncTearDown
    setUpTestData
    failureException
    longMessage
    maxDiff

[isort]
multi_line_output = 3
include_trailing_comma = true
